--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/dora"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/dora"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -31,8 +31,8 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".DetailActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name="com.mario.gonzaga_10118390.mytestapp.DetailActivity" />
+        <activity android:name="com.mario.gonzaga_10118390.mytestapp.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
